--- a/LeagueOfNinjas/LeagueOfNinjas/LeagueOfNinjas.csproj
+++ b/LeagueOfNinjas/LeagueOfNinjas/LeagueOfNinjas.csproj
@@ -88,6 +88,8 @@
     </ApplicationDefinition>
     <Compile Include="ViewModel\AddNinjaCommand.cs" />
     <Compile Include="ViewModel\EditNinjaCommand.cs" />
+    <Compile Include="ViewModel\ItemVM.cs" />
+    <Compile Include="ViewModel\NinjaInfoVM.cs" />
     <Compile Include="Views\AddNinjaWindow.xaml.cs">
       <DependentUpon>AddNinjaWindow.xaml</DependentUpon>
     </Compile>
@@ -121,6 +123,9 @@
     <Compile Include="ViewModel\NinjaListVM.cs" />
     <Compile Include="ViewModel\NinjaVM.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Views\NinjaInfoWindow.xaml.cs">
+      <DependentUpon>NinjaInfoWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\AddNinjaWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -141,6 +146,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\NinjaInfoWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
