--- a/LeagueOfNinjas/LeagueOfNinjas/LeagueOfNinjas.csproj
+++ b/LeagueOfNinjas/LeagueOfNinjas/LeagueOfNinjas.csproj
@@ -87,11 +87,13 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModel\Commands\AddNinjaCommand.cs" />
+    <Compile Include="ViewModel\Commands\ClearInventoryCommand.cs" />
     <Compile Include="ViewModel\Commands\EditNinjaCommand.cs" />
     <Compile Include="ViewModel\InventoryVM.cs" />
     <Compile Include="ViewModel\ItemVM.cs" />
     <Compile Include="ViewModel\Commands\LogInCommand.cs" />
     <Compile Include="ViewModel\NinjaInfoVM.cs" />
+    <Compile Include="ViewModel\ShopVM.cs" />
     <Compile Include="Views\AddNinjaWindow.xaml.cs">
       <DependentUpon>AddNinjaWindow.xaml</DependentUpon>
     </Compile>
